# orto-ai-engine

./: README.md  main.py  nixpacks.toml  pyproject.toml  test_cross_month_blocks.py  test_oct31_scenario.py
src/: main.py
src/api/v1/: solve.py
src/core/: config.py  schemas.py
src/services/: solver.py  validator.py
src/tests/: test_solver.py  test_validator.py
